got some work done. But need to authenticate with credential token before proceeding

--- a/app/templates/submit-data-success.html
+++ b/app/templates/submit-data-success.html
@@ -3,10 +3,13 @@
 {% block content %}
   <h1 style="color:green;">Success!</h1>
   <p class="important">
-    Your data has been successfully submitted. (Next step is to fit your data against our ML model -- in development. Should be done shortly!)
+    Your data has been successfully submitted.
   </p>
   <h2>Your data:</h2>
   <pre style="white-space: pre-wrap; font-size:11px;">
   {{ data }}
   </pre>
+  <hr>
+  <h2>If you want to retrieve data from the database, click below:</h2>
+  <a href="/return-data/"><button>Return Data</button></a><br>
 {% endblock %}
