made some changes to the form

--- a/app/templates/submit-data.html
+++ b/app/templates/submit-data.html
@@ -14,10 +14,9 @@
     <div class="form-group all-fields">
 
     {{ form.allFields() }}
+    {{ form.submit() }}
 
     </div>
-
-    <input type="submit" value="Submit!" />
 
   </form>
 {% endblock %}
