rows and columns are successfully highlighted

--- a/app/templates/return-data.html
+++ b/app/templates/return-data.html
@@ -1,11 +1,15 @@
 {% extends "layout.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
+
   <h1 style="color:green;">Success!</h1>
 
-  <h2>Data from the database:</h2>
-  <pre style="white-space: pre-wrap; font-size:11px;">
-  {{ data }}
-  </pre>
-  <hr>
+  <br>
+  <h2>Summary:</h2>
+  {{ summary|safe }}
+  <br>
+  <h2>Data:</h2>
+  <a href="/download-data/"><button>Download as CSV</button></a><br>
+  {{ data|safe }}
+
 {% endblock %}
