--- a/app/templates/submit-data.html
+++ b/app/templates/submit-data.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
-  <h1>Submit Data</h1>
+  <h1>Access Data Manually</h1>
   <p class="important">
-    Fill it out manually.
+    Select which paramaters you want included from below:
   </p>
 
   <!-- Create a form -->
