allow advanced user querying

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
   <p>
     Get started by submitting what data you'd want.
   </p>
-  <a href="/submit-data/"><button>Submit Data</button></a><br>
+  <a href="/get-data/"><button>Submit Data</button></a><br>
   </div>
 
   <!-- Section -->
@@ -45,6 +45,6 @@
   <p>
     Send an SQL query to our endpoint to recieve data.
   </p>
-  <a href="/"><button>Placeholder</button></a><br>
+  <a href="/get-data-advanced/"><button>Get Data Advanced</button></a><br>
   </div>
 {% endblock %}
