--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,7 +43,7 @@
   <div class="section">
   <h2>2. Acesss Data Programmatically</h2>
   <p>
-    Send an SQL query to our endpoint to recieve data.
+    Send an SQL query to our endpoint to receive data.
   </p>
   <a href="/get-data-advanced/"><button>Get Data Advanced</button></a><br>
   </div>
