--- a/app/static/base.css
+++ b/app/static/base.css
@@ -4,10 +4,103 @@ body{
   padding: 0 15px 0 15px;
 }
 
+/* Main styles */
+body{
+  font-family: Arial;
+  line-height: 1.25;
+  margin:20px;
+}
+
 h1{
+  font-weight: 400;
   color:blue;
+  margin: 10px 0;
+  font-size: 42px;
+  letter-spacing: 1px;
+  word-spacing: 10px;
+}
+
+h2{
+  font-weight: 400;
+  margin: 10px 0;
+  font-size: 32px;
+  letter-spacing: 0.75px;
+  word-spacing: 5px;
+}
+
+h3{
+  font-weight: 400;
+  margin: 10px 0;
+  font-size: 22px;
+  letter-spacing: 0.5px;
+  word-spacing: 2px;
+}
+
+.important {
+  font-weight: 400;
+  color: #336699;
 }
 
 .section{
   padding:0 0 50px 0;
+}
+
+
+/*  The footer  */
+#footer{
+  font-size: 10px;
+  margin-left:2vw;
+}
+
+/* Style your buttons */
+button, input[type="submit"]{
+  border: none;
+  display: inline-block;
+  width: 30vw;
+  padding: 8px 16px;
+  vertical-align: middle;
+  overflow: hidden;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  user-select: none;
+  margin-bottom: 16px!important;
+  color: #FFFFFF;
+  background-color: #4CAF50;
+}
+
+button.download{
+  font-size: 1.33vw;
+  width: 15vw;
+}
+
+@media screen and (max-width: 750px) {
+  button.download{
+    font-size: 2.25vw;
+    width: 25vw;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  button.download{
+    white-space: normal;
+    font-size: 13px;
+    width: 100px;
+    padding: 4px 8px;
+  }
+}
+
+button:hover, input[type="submit"]:hover{
+  color: #FFFFFF;
+  background-color: #3e8e41;
+}
+
+/* Formatting Stuff */
+.button-group{
+  display:flex;
+  justify-content: flex-start;
+}
+.button-group > *{
+  margin-right: 2.5vw;
 }
