got the app to work kinda.

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
 
     <div class="form-group all-fields">
 
-    {{ form.userName() }}
+    {{ form.email() }}
     {{ form.password() }}
     {{ form.submit() }}
 
