--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,8 +10,8 @@
 
     <div class="form-group all-fields">
 
-    {{ form.email() }}
-    {{ form.password() }}
+    Email: {{ form.email() }}
+    Password: {{ form.password() }}
     {{ form.submit() }}
 
     </div>
