--- a/app/static/base.css
+++ b/app/static/base.css
@@ -11,6 +11,13 @@ body{
   margin:20px;
 }
 
+/*  Style the navigation */
+.navigation{
+  font-family: monospace;
+  /* white-space: pre; */
+  line-height: 1.25;
+}
+
 h1{
   font-weight: 400;
   color:blue;
@@ -103,4 +110,32 @@ button:hover, input[type="submit"]:hover{
 }
 .button-group > *{
   margin-right: 2.5vw;
+}
+
+
+/* Style the close buttons */
+.alert.alert-warning{
+  background:#d9d9d9;
+  padding:20px;
+  min-height: 30px;
+  font-size: 12px;
+}
+
+.alert > button.close {
+  content: 'X';
+  position: absolute;
+  z-index: 1;
+  right: 50px;
+  top: 50px;
+  width: 30px;
+  height: 30px;
+  font-size: 30px;
+  font-weight: 300;
+  background:none;
+  color:black;
+  opacity: 0.3;
+}
+
+.alert > button.close:hover {
+  opacity: 1;
 }
