--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='tables.css') }}">
 
-    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+    <!-- Load JQuery -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{
       url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
 
-    <script type=text/javascript src="{{url_for('static', filename='tables.js') }}"></script>
+    <script type=text/javascript src="{{url_for('static', filename='extensions.js') }}"></script>
+    <!-- <script type=text/javascript src="{{url_for('static', filename='tables.js') }}"></script> -->
 
     <title>{% block title %}{% endblock %} - Open Broadway Data</title>
     {% endblock %}
@@ -18,24 +20,20 @@
   <body>
     <!-- Create a header for nav -->
     <div class="navigation">
-
     <!-- Only if logged in -->
     {% if current_user.is_authenticated %}
-    <pre>
-      Signed in as "{{ current_user.email}}"
-
-    <a href="/">Home</a>
-    <a href="/settings">Settings</a>
-    <a href="/logout">Logout</a>
-
+      <a href="/">Home</a>
+      <a href="/settings">Settings</a>
+      <a href="/logout">Logout</a>
+      <pre>
+        Signed in as "{{ current_user.email}}"
+      </pre>
     <!-- Route appropriate pages -->
     {% elif request.endpoint == 'login' %}
       <a href="/signup">Signup</a>
     {% elif request.endpoint == 'signup' %}
       <a href="/login">Login</a>
-
     {% endif %}
-    </pre>
     </div>
 
     <!-- Add content -->
