--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -4,8 +4,10 @@
 
 {% for message in get_flashed_messages() %}
       <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
+        <button class="close" id="close-alert" data-dismiss="alert" onclick="closeDiv()">&times;</button>
+        <pre>
+          {{ message }}
+        </pre>
       </div>
     {% endfor %}
 
@@ -26,6 +28,6 @@
     </div>
 
   <div class="login-signup">
-        <span>Already have an account? <a href="{{ url_for('login') }}">Log in.</a></span>
+        <pre>Already have an account? <a href="{{ url_for('login') }}">Log in.</a></pre>
   </div>
 {% endblock %}
