--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -5,6 +5,10 @@
 
   <h1>Settings</h1>
   <p>
-    This page will soon allow you to modify your settings.
+    This page will soon allow you to modify your settings:
   </p>
+  <ul>
+      <li><a href="settings/reset-password">Reset Your Password</a></li>
+      <li><a href="settings/update-profile">Update Your Profile</a></li>
+  </ul>
 {% endblock %}
