--- a/app/templates/login/forgot-password.html
+++ b/app/templates/login/forgot-password.html
@@ -2,17 +2,8 @@
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
 
-{% for message in get_flashed_messages() %}
-      <div class="alert alert-warning">
-        <button class="close" id="close-alert" data-dismiss="alert" onclick="closeDiv()">&times;</button>
-        <pre>
-          {{ message }}
-        </pre>
-      </div>
-{% endfor %}
 
-
-  <h1>Login</h1>
+  <h1>{{ title }}</h1>
 
   <!-- Create a form -->
   <form method="POST">
