--- a/app/templates/settings/reset-password.html
+++ b/app/templates/settings/reset-password.html
@@ -5,6 +5,18 @@
 
   <h1>Reset Your Password</h1>
   <p>
-    Reset your password...
+    Type it in and you know what...
   </p>
+
+  <!-- Create a form -->
+  <form method="POST">
+  {{ form.csrf_token }}
+
+  <div class="form-group all-fields">
+  {{ form.allFields() }}
+  {{ form.submit() }}
+
+  </div>
+
+
 {% endblock %}
