--- a/app/templates/login/reset-password.html
+++ b/app/templates/login/reset-password.html
@@ -4,14 +4,15 @@
 
 
   <h1>{{ title }}</h1>
+  <p>
+    Type it in and you know what...
+  </p>
 
   <!-- Create a form -->
   <form method="POST">
   {{ form.csrf_token }}
-  {{ form.hidden_tag() }}
 
   <div class="form-group all-fields">
-
   {{ form.allFields() }}
   {{ form.submit() }}
 
