--- a/app/templates/settings/settings.html
+++ b/app/templates/settings/settings.html
@@ -8,7 +8,7 @@
     This page will soon allow you to modify your settings:
   </p>
   <ul>
-      <li><a href="settings/reset-password">Reset Your Password</a></li>
+      <li><a href="settings/change-password">Change Your Password</a></li>
       <li><a href="settings/update-profile">Update Your Profile</a></li>
   </ul>
 {% endblock %}
