--- a/app/templates/settings/change-password.html
+++ b/app/templates/settings/change-password.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-  <h1>Reset Your Password</h1>
+  <h1>Change Your Password</h1>
   <p>
     Type it in and you know what...
   </p>
