--- a/app/templates/emails/email_layout.html
+++ b/app/templates/emails/email_layout.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
     {% endblock %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='email.css') }}">
+    <link rel="stylesheet" href="url_for('static', filename='email.css') }}">
   </head>
 
   <body>
