allow better use of flask secret

--- a/app/templates/settings/settings.html
+++ b/app/templates/settings/settings.html
@@ -10,5 +10,7 @@
   <ul>
       <li><a href="settings/change-password">Change Your Password</a></li>
       <li><a href="settings/update-profile">Update Your Profile</a></li>
+      <li><a href="settings/api-key">Api Key</a></li>
+
   </ul>
 {% endblock %}
