--- a/app/static/base.css
+++ b/app/static/base.css
@@ -139,3 +139,8 @@ button:hover, input[type="submit"]:hover{
 .alert > button.close:hover {
   opacity: 1;
 }
+
+/* Form fields */
+.form-group.all-fields.wide > td, input{
+  width:65vw;
+}
