--- a/app/templates/get-data-advanced.html
+++ b/app/templates/get-data-advanced.html
@@ -16,7 +16,7 @@
     {{ form.csrf_token }}
     {{ form.hidden_tag() }}
 
-    <div class="form-group all-fields wide">
+    <div class="form-group all-fields wide-fields">
 
     {{ form.allFields() }}
     {{ form.submit() }}
