finished up data summary

--- a/app/templates/get-data-advanced.html
+++ b/app/templates/get-data-advanced.html
@@ -10,7 +10,20 @@
   </pre>
 
   <h3>Alternatively, you can write your SQL query below:</h3>
+  <pre>
+    <b>sql Query:</b>
+        a select statement to the database.
 
+        Details on the query params will be filled in later. <i>(This is a work in progress...)</i>
+
+    <b>API_KEY:</b>
+        will autopopulate if you are registered.
+
+    <b>Data Summary Detail Level:</b>
+        Choose an integer between 1 and 3.
+        Higher numbers correspond with more detailed data summaries.
+
+  </pre>
   <!-- Create a form -->
   <form method="POST">
     {{ form.csrf_token }}
