--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
   <p>
     Get started by submitting what data you'd want.
   </p>
-  <a href="/get-data/"><button>Submit Data</button></a><br>
+  <a href="/get-data/"><button>Get Data</button></a><br>
   </div>
 
   <!-- Section -->
