allow admins to create roles

--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -10,5 +10,7 @@
   <ul>
       <li><a href="admin/approve-users">Approve Users</a></li>
       <li><a href="admin/inspect-users">Inspect Users</a></li>
+      <li><a href="admin/create-roles">Create Roles</a></li>
+      <li><a href="admin/assign-roles">Assign Roles</a></li>
   </ul>
 {% endblock %}
