--- a/app/templates/emails/reset_password.html
+++ b/app/templates/emails/reset_password.html
@@ -8,7 +8,7 @@
 
   You reqested to have your password reset.
 
-  To reset your password <a href="{{ url_for('reset_password', token=token, _external=True) }}">click here</a>.
+  To reset your password <a href="{{ url_for('forgot-password.reset_password', token=token, _external=True) }}">click here</a>.
 </pre>
 
 {% endblock %}
