--- a/app/static/base.css
+++ b/app/static/base.css
@@ -55,6 +55,8 @@ h3{
   border-radius: 65px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 
