--- a/app/static/base.css
+++ b/app/static/base.css
@@ -21,7 +21,6 @@ body{
 
 h1{
   font-weight: 400;
-  color:blue;
   margin: 10px 0;
   font-size: 42px;
   letter-spacing: 1px;
@@ -50,7 +49,7 @@ h3{
 }
 
 .section{
-  padding:0 0 50px 0;
+  padding:0 0 10px 0;
   background-color: white;
   border-radius: 65px;
   display: flex;
@@ -58,6 +57,23 @@ h3{
   align-items: center;
   justify-content: center;
 }
+/* Begin Non-loggedIn User Homepage styles */
+.section-text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.section-text h2{
+  margin-bottom: 0px;
+}
+.section-text p{
+  margin-top: 0px;
+}
+/* End Non-loggedIn User Homepage styles */
+
+
+
 
 
 /*  The footer  */
@@ -81,7 +97,7 @@ button, input[type="submit"]{
   user-select: none;
   margin-bottom: 16px!important;
   color: #FFFFFF;
-  background-color: #4CAF50;
+  background-color: #09790d;
 }
 
 button.download{
@@ -107,7 +123,8 @@ button.download{
 
 button:hover, input[type="submit"]:hover{
   color: #FFFFFF;
-  background-color: #3e8e41;
+  background-color: #0575ff;
+  transform: scale(1.1);
 }
 
 /* Formatting Stuff */
