corrected and reconciled front end display formatting

--- a/app/templates/login/login.html
+++ b/app/templates/login/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-  <h1>{{ headerTitle }}</h1>
+  <h1>Open Broadway Data</h1>
 
   <!-- Create a form -->
   <form method="POST">
