--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,16 +1,18 @@
 /* Use this document to change base app styles */
-body{
-  font: normal medium/1.4 sans-serif;
-  padding: 0 15px 0 15px;
-}
 
 /* Main styles */
 body{
   font-family: Arial;
   line-height: 1.25;
   margin:20px;
+  padding: 0 15px 0;
   background-color: #c4ffc4;
+
+  /* font: normal medium/1.4 sans-serif; */
 }
+
+/* Want to create an opaque + blurred background... */
+
 
 /*  Style the navigation */
 .navigation{
@@ -48,39 +50,54 @@ h3{
   color: #336699;
 }
 
-.section{
-  padding:0 0 10px 0;
+/* Create a floating module */
+.floating-module{
+  width:90%;
+  margin: 20px auto;
+  padding:20px;
   background-color: white;
-  border-radius: 65px;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
 /* Begin Non-loggedIn User Homepage styles */
-.section-text{
+.floating-module .info{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.section-text h2{
-  margin-bottom: 0px;
+
+.floating-module h1{
+  font-weight:bold;
 }
-.section-text p{
+
+.floating-module h2{
+  margin-bottom: 0px;
+  color:darkgreen;
+}
+.floating-module p{
   margin-top: 0px;
 }
+
+.floating-module .message{
+  font-family:Consolas, "courier new";
+  font-size: 12px;
+  line-height:22.5px;
+  margin:10px 0 20px;
+}
 /* End Non-loggedIn User Homepage styles */
-
-
-
 
 
 /*  The footer  */
 #footer{
   font-size: 10px;
-  margin-left:2vw;
+  margin:20px 0 10px 2vw;
 }
+
 
 /* Style your buttons */
 button, input[type="submit"]{
