--- a/app/static/base.css
+++ b/app/static/base.css
@@ -13,10 +13,8 @@ body, html {
 body{
   font-family: Arial;
   line-height: 1.25;
-  margin:20px;
-  padding: 0 15px 0;
-  /* background-color: #c4ffc4; */
-  /* font: normal medium/1.4 sans-serif; */
+  margin:0;
+  font: normal medium/1.4 sans-serif;
 }
 
 .bg-image {
@@ -31,7 +29,7 @@ body{
   right: 0;
 
   /* Set a specific height */
-  height: 100%;
+  height: 125%;
 
   /* Create the parallax scrolling effect */
   background-position: center top;
@@ -49,9 +47,27 @@ body{
 
 /*  Style the navigation */
 .navigation{
+  font-family: normal medium/1.4 sans-serif;
+  background: rgb(0, 0, 0, 0.5);
+  padding:20px;
+  line-height: 1.0;
+}
+.navigation a{
+    padding:0 10px;
+    color:white;
+    text-decoration-line:none;
+    text-decoration-style:none;
+    text-decoration-color:none;
+}
+.navigation a:hover{
+    color:darkgreen;
+}
+.navigation .signed-in-status{
+  padding-right:20px;
+  color:rgb(204, 204, 204);
   font-family: monospace;
-  /* white-space: pre; */
-  line-height: 1.25;
+  font-size: 11px;
+  text-align: right;
 }
 
 h1{
