--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- Create a header for nav -->
-    <div class="navigation">
+    <div class="navigation" id="myHeader">
 
     <!-- Only if logged in -->
     {% if current_user.is_authenticated %}
