fixed page formatting. #17

--- a/app/static/base.css
+++ b/app/static/base.css
@@ -16,6 +16,9 @@ body{
   margin:0;
   font: normal medium/1.4 sans-serif;
 }
+.page-content{
+  padding: 20px;
+}
 
 .bg-image {
   /* The image used */
