--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,13 @@
 {% block title %}{{ title }}{% endblock %}
 {% block head %}
 {{ super() }}
-
 {% endblock %}
-{% block content %}
 
+{% block background_image %}
 <div class="bg-image"></div>
+{% endblock %}
+
+{% block content %}
 
   <!-- Floating Module -->
 <div class="floating-module">
