added toggle option

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,6 +12,7 @@
       url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
 
     <script type=text/javascript src="{{url_for('static', filename='extensions.js') }}"></script>
+    <script type=text/javascript src="{{url_for('static', filename='user-interactions.js') }}"></script>
     <!-- <script type=text/javascript src="{{url_for('static', filename='tables.js') }}"></script> -->
 
     <title>{% block title %}{% endblock %} - Open Broadway Data</title>
