--- a/app/templates/settings/settings.html
+++ b/app/templates/settings/settings.html
@@ -5,8 +5,16 @@
 
   <h1>Settings</h1>
   <p>
-    This page will soon allow you to modify your settings:
+    Modify your settings:
   </p>
+
+
+  <div id="toggle-views">
+    <label>Toggle between analyze mode and developer mode here!</label>
+    <input type="checkbox" class='toggle' checked data-toggle="toggle">
+    <div class='status'>ON</div>
+  </div>
+
   <ul>
       <li><a href="settings/change-password">Change Your Password</a></li>
       <li><a href="settings/update-profile">Update Your Profile</a></li>
