allow for real time updating of modes #28

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -45,11 +45,10 @@
             </div>
             <div class="dev-mode">
               {% if current_user.developer_mode %}
-              Developer
+              Developer Mode
               {% else %}
-              Analyze
+              Analyst Mode
               {% endif %}
-              mode
               <span class="tooltiptext">
                 Switch between view modes in Settings.
               </span>
