--- a/app/templates/settings/settings.html
+++ b/app/templates/settings/settings.html
@@ -13,9 +13,9 @@
     <label>Toggle between analyze mode and developer mode here!</label>
     <input type="checkbox" class='toggle' data-toggle="toggle" {% if current_status %}checked{% endif %}>
       {% if current_status %}
-      <div class='status'>ON</div>
+      <div class='status'>Developer Mode</div>
       {% else %}
-      <div class='status'>OFF</div>
+      <div class='status'>Analyst Mode</div>
       {% endif %}
   </div>
 
