major reorganized the project.

--- a/app/templates/emails/approved.html
+++ b/app/templates/emails/approved.html
@@ -13,7 +13,7 @@
   We only give access to cool people so you're cool...
 
 
-  To activate your account, please follow <a href="{{ url_for('verify_account.verify_account', token=token, _external=True) }}">this url</a>.
+  To activate your account, please follow <a href="{{ url_for('internal.verify_account', token=token, _external=True) }}">this url</a>.
 
   -BroadwayBot
   http://openbroadwaydata.com/
