--- a/app/templates/settings/settings.html
+++ b/app/templates/settings/settings.html
@@ -20,9 +20,9 @@
   </div>
 
   <ul>
-      <li><a href="settings/change-password">Change Your Password</a></li>
-      <li><a href="settings/update-profile">Update Your Profile</a></li>
-      <li><a href="settings/api-key">Api Key</a></li>
+      <li><a href="change-password">Change Your Password</a></li>
+      <li><a href="update-profile">Update Your Profile</a></li>
+      <li><a href="api-key">Api Key</a></li>
 
   </ul>
 {% endblock %}
