--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -8,9 +8,9 @@
     Admin settings. (COOL!)
   </p>
   <ul>
-      <li><a href="admin/approve-users">Approve Users</a></li>
-      <li><a href="admin/inspect-users">Inspect Users</a></li>
-      <li><a href="admin/create-roles">Create Roles</a></li>
-      <li><a href="admin/assign-roles">Assign Roles</a></li>
+      <li><a href="approve-users">Approve Users</a></li>
+      <li><a href="inspect-users">Inspect Users</a></li>
+      <li><a href="create-roles">Create Roles</a></li>
+      <li><a href="assign-roles">Assign Roles</a></li>
   </ul>
 {% endblock %}
