--- a/app/templates/login/signup.html
+++ b/app/templates/login/signup.html
@@ -23,6 +23,6 @@
     </div>
 
   <div class="login-signup">
-        <pre>Already have an account? <a href="{{ url_for('login.login') }}">Log in.</a></pre>
+        <pre>Already have an account? <a href="{{ url_for('auth.login') }}">Log in.</a></pre>
   </div>
 {% endblock %}
