reorganize static dir

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,9 +11,9 @@
     <script>window.jQuery || document.write('<script src="{{
       url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
 
-    <script type=text/javascript src="{{url_for('static', filename='extensions.js') }}"></script>
-    <script type=text/javascript src="{{url_for('static', filename='user-interactions.js') }}"></script>
-    <!-- <script type=text/javascript src="{{url_for('static', filename='tables.js') }}"></script> -->
+    <script type=text/javascript src="{{url_for('static', filename='js/extensions.js') }}"></script>
+    <script type=text/javascript src="{{url_for('static', filename='js/user-interactions.js') }}"></script>
+    <!-- <script type=text/javascript src="{{url_for('static', filename='js/tables.js') }}"></script> -->
 
     <title>{% block title %}{% endblock %} - Open Broadway Data</title>
     {% endblock %}
