reorganize static dir for css

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -2,7 +2,7 @@
 
 :root {
   --blur-effect: blur(10px);
-  --theater-image:url('images/keo-oran-theater-unsplash.jpg');
+  --theater-image:url('../images/keo-oran-theater-unsplash.jpg');
 }
 
 body, html {
