fixed the error. Utils weren't refactored correctly. #30

--- a/app/templates/analyze/display-data.html
+++ b/app/templates/analyze/display-data.html
@@ -10,8 +10,8 @@
   <br>
   <h2>Data:</h2>
   <div class="download-buttons">
-    <a href="/user-interactions/download-data/csv"><button class="download">Download as CSV</button></a>
-    <a href="/user-interactions/download-data/json"><button class="download">Download as JSON</button></a>
+    <a href="/download-data/csv"><button class="download">Download as CSV</button></a>
+    <a href="/download-data/json"><button class="download">Download as JSON</button></a>
   </div>
 
   <div class="table-container">
