--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -80,7 +80,7 @@
         <p>
           Send an SQL query to our endpoint to receive data.
         </p>
-        <a href="/get-data-advanced/"><button>Get Data</button></a><br>
+        <a href="/advanced/get-data"><button>Get Data</button></a><br>
   </div>
 
 {% endif %}
