--- a/app/templates/settings/settings.html
+++ b/app/templates/settings/settings.html
@@ -12,12 +12,12 @@
   <div id="toggle-views">
     <p>Toggle between analyze mode and developer mode here!</p>
     <label for="develop">Developer Mode</label>
-    <input type="radio" id="develop" name="modes" class= "toggle" {% if current_status %}checked{% endif %}>
+    <input type="radio" id="develop" name="modes" class= "toggle" {% if current_status==True %}checked{% endif %}>
 
     <label for="analyst">Analyst Mode</label>
-    <input type="radio" id="analyst" name="modes"  class= "toggle" {% if current_status ==false  %}checked{% endif %}>
+    <input type="radio" id="analyst" name="modes"  class= "toggle" {% if current_status ==False  %}checked{% endif %}>
 
-    <!-- <input type="checkbox" class='toggle' data-toggle="toggle" {% if current_status %}checked{% endif %}> -->
+
     {% if current_status %}
     <div class='status'> You are viewing the data in Developer Mode</div>
     {% else %}
