floating home button far right #29

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -55,7 +55,11 @@ body{
   padding:20px;
   line-height: 1.0;
   display:flex;
-  justify-content: flex-end;
+ justify-content: flex-end;
+ align-items: center;
+}
+.navigation .home{
+ margin-right: auto;
 }
 .navigation a{
     padding:0 10px;
