changed text for dev-mode div

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -45,9 +45,9 @@
             </div>
             <div class="dev-mode">
               {% if current_user.developer_mode %}
-              Developer Mode
+              Current Mode: Developer
               {% else %}
-              Analyst Mode
+              Current Mode: Analyst
               {% endif %}
               <span class="tooltiptext">
                 Switch between view modes in Settings.
